--- a/app/src/main/res/layout/activity_my_list_trips.xml
+++ b/app/src/main/res/layout/activity_my_list_trips.xml
@@ -4,28 +4,28 @@
     android:id="@+id/activity_list_trips"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.mmm.istic.takemeto.Vue.MyListTripsActivity"
-    android:orientation="vertical">
+    tools:context="com.mmm.istic.takemeto.Vue.MyListTripsActivity">
 
     <TextView
-        android:text="Welcome"
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="45dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
         android:layout_marginTop="16dp"
-        android:id="@+id/textView5" />
+        android:text="Welcome" />
 
     <ScrollView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:clipToPadding="false"
         android:fillViewport="true">
 
@@ -36,37 +36,37 @@
 
 
             <TextView
-                android:text="Own trip List"
+                android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:id="@+id/textView13"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:text="Own trip List" />
 
             <ListView
-         android:layout_width="match_parent"
-         android:layout_height="0dp"
-         android:layout_alignParentTop="true"
-         android:layout_alignParentLeft="true"
-         android:layout_alignParentStart="true"
-         android:layout_marginTop="45dp"
-         android:id="@+id/listeViewTrajets"
+                android:id="@+id/listeViewTrajets"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="45dp"
                 android:layout_weight="5" />
 
             <TextView
-                android:text="Booked Trip List"
+                android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:id="@+id/textView15"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:text="Booked Trip List" />
 
             <ListView
+                android:id="@+id/listeViewReservations"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:layout_marginTop="45dp"
-                android:id="@+id/listeViewReservations"
                 android:layout_weight="5" />
 
 
