--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -76,10 +76,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/edit_signin_mail"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="Password"
                 android:textSize="20dp"
-                android:textStyle="bold"
-                tools:text="Password" />
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edit_signin_prenom"
