--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -43,7 +43,7 @@
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Please answer all the input"
+            android:text="Please answer all the fields"
             android:textSize="18sp" />
 
         <LinearLayout
@@ -188,7 +188,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:onClick="chooseProfilImage"
+                android:id="@+id/takeimage"
                 android:text="Choose a profil image" />
 
             <Button
