--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_search_result"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/voiture3"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
