--- a/app/src/main/res/layout/activity_search_trip.xml
+++ b/app/src/main/res/layout/activity_search_trip.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:orientation="vertical"
+    android:background="@drawable/voiture3"
     tools:context="com.mmm.istic.takemeto.Vue.SearchTripActivity">
 
 
