--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,6 +7,7 @@
     android:layout_weight="1"
     android:gravity="center"
     android:orientation="vertical"
+    android:background="@drawable/voiture3"
     tools:context="com.mmm.istic.takemeto.Vue.SignInActivity">
 
     <LinearLayout
