--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,9 +2,11 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/trips"
-        android:title="Trips"/>
+        android:title="My trips"/>
     <item android:id="@+id/profil"
         android:title="My profil" />
     <item android:id="@+id/suggestions"
         android:title="Suggestions" />
+    <item android:id="@+id/home"
+    android:title="Go back home" />
 </menu>
