--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/button_background"
         android:layout_weight="1"
         android:text="Search Trips" />
 
@@ -37,6 +38,7 @@
         android:layout_alignLeft="@+id/button2"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/button2"
+        android:background="@drawable/button_background"
         android:layout_weight="1"
         android:text="suggest Trips" />
 
