--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/button_background"
         android:layout_weight="1"
         android:text="Sign Up" />
 
@@ -54,6 +55,7 @@
         android:layout_alignEnd="@+id/button3"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/button3"
+        android:background="@drawable/button_background"
         android:layout_weight="1"
         android:text="Sign In" />
 
