--- a/app/src/main/res/layout/activity_suggest_trip.xml
+++ b/app/src/main/res/layout/activity_suggest_trip.xml
@@ -198,6 +198,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:background="@drawable/button_background"
                 android:text="Create" />
     </LinearLayout>
 </RelativeLayout>
