--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -160,6 +160,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="@drawable/button_background"
                 android:text="Google Maps"
                 android:textSize="14sp" />
 
@@ -218,6 +219,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
+        android:background="@drawable/button_background"
         android:layout_weight="1"
         android:text="Book / EDIT" />
 
