Modification TripActivity / LinearLayout

--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -194,10 +194,16 @@
                 android:text="Choose a profil image"
                 android:onClick="chooseProfilImage"/>
 
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1.5"></LinearLayout>
+
             <Button
                 android:id="@+id/CreateNewUser"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/button_background"
                 android:layout_weight="1"
