--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_authentification"
     android:layout_width="match_parent"
@@ -13,6 +14,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.mmm.istic.takemeto.Vue.StartActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        app:srcCompat="@drawable/covoiturage"
+        android:id="@+id/imageView4"
+        android:layout_weight="0.94"
+        android:layout_height="200dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -24,7 +32,8 @@
         android:text="Welcome to your Application TakeMeTo"
         android:textColor="@color/colorRed"
         android:textSize="25dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
