--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -106,6 +106,12 @@
             android:onClick="signIn"
             android:text="Sign IN" />
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"></LinearLayout>
+
         <Button
             android:id="@+id/signinasuser1"
             android:layout_width="match_parent"
